fixing typos in the html page

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 			  	<li>Hover your mouse over the water level line graphs to retrieve exact values of water level and date.</li>
 			  	<li> Click on check box <img src="assets/checkbox.png" height="15px" style="margin-right:2px"/>on the topright corner to display different layers of information.
 			  	</li>
-			  	<li>In "Soil Water Index" layer, click on the handel <img src="assets/handel1.png" height="15px" style="margin-right:2px"/>and drag it to change the displaz of SWI to the corresponding date.</li>
+			  	<li>In "Soil Water Index" layer, click on the handle <img src="assets/handel1.png" height="15px" style="margin-right:2px"/>and drag it to change the display of SWI to the corresponding date.</li>
 			  	
-			  	<li>In the "Vegetation Indices" layer, click on one of the red highlishted site<img src="assets/redhighlight.png" height="15px" style="margin-left:3px"/> to activate the Vegetation Indices (VI) Panel; drag the slider handel <img src="assets/handel2.png" height="15px"/>to change the vegetation indices displayed in the VI panel to the according date.</li>
+			  	<li>In the "Vegetation Indices" layer, click on one of the red highlighted site<img src="assets/redhighlight.png" height="15px" style="margin-left:3px"/> to activate the Vegetation Indices (VI) Panel; drag the slider handle <img src="assets/handel2.png" height="15px"/>to change the vegetation indices displayed in the VI panel to the according date.</li>
 			  
 
 			  </ol>
