--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 			</div> -->
 
  			<div class="tab">
-			  <button class="tablinks"id="defaultOpen" onmouseover="openCity(event, 'Intructions')" >Intructions</button>
-			  <button class="tablinks" onmouseover="openCity(event, 'Sources')">Sources</button>
+			  <button class="tablinks"id="leftbutton" onmouseover="openCity(event, 'Intructions')" >Intructions</button>
+			  <button class="tablinks" id="rightbutton" onmouseover="openCity(event, 'Sources')">Sources</button>
 			 
 			</div>
 
@@ -94,7 +94,7 @@
 					  evt.currentTarget.className += " active";
 					}
 
-				document.getElementById("defaultOpen").click();
+				// document.getElementById("defaultOpen").click();
 			</script>
 		<!--/div-->
     		<!--link all the style sheet, javescripts to the html-->
