responsive design-adjusting breakpoint for better layout of the webpage.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>SoilWater&#179</title>
-		<link rel="shortcut icon" href="assets/soil.png">
+		<link rel="shortcut icon" href="assets/soil-01.svg">
 
 		<link rel="stylesheet" href="lib/leaflet/leaflet.css">
 		<link rel="stylesheet" href="https://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" type="text/css">
